# ledger-sdk

./: .bandit  .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  BACKEND_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  HARDENING.md  HARDENING_PASS_REPORT.md  JOURNAL.md  LICENSE  LICENSING.md  MANIFEST.in  NOTICE  NOTICES.md  ORCHESTRATION.md  PERFORMANCE_REVIEW.md  PRODUCTION_AUDIT.md  README.md  SCHEDULER.md  SECURITY.md  SECURITY_HARDENING_2026-04-24.md  WIRING_AUDIT.md  alembic.ini  docker-compose.yml  final_test_count.txt  fix_trigger.sql  fly.toml  pyproject.toml  requirements.txt  setup.py  test_asyncpg.py  test_calculate_event_hash_asyncpg.py  vercel.json  verify_wedge_e2e.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci-cd.yml  deploy-api.yml
apps/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
apps/dashboard-demo/: README.md  index.html  scaffold.py  vite.config.ts
apps/landing/: index.html  package-lock.json  package.json  vite.config.ts
apps/runtime/: COMMERCIAL-LICENSING.md  LICENSE  LICENSE-FAQ.md  README.md
archive/: README.md
citadel-core/: MANIFEST.md  README.md
dashboard/: package-lock.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
db/: 00-init-test-db.sql  README.md  schema.sql  seed-complete.sql
db/migrations/: 001_tenant_isolation.sql  002_api_keys.sql  003_governance_tokens.sql  004_governance_audit.sql  005_RESERVED.sql  006_api_keys.sql  007_operators.sql  008_billing.sql  009_runtime_compatibility.sql  010_agents.sql  010_decision_first_introspection.sql  010b_ancestry_indexes.sql  011_agent_identity.sql  011b_policies.sql  012_connectors.sql  013_audit_rich_fields.sql  014_agents_composite_pk.sql  015_orchestration_lineage.sql  016_api_key_description.sql  017_trust_score_model.sql  018_cost_controls.sql  019_cost_budget_topups.sql
demo/: README.md  citadel_demo.py
demos/: demo_db_delete.py
docs/: AI_GOVERNANCE.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_RESEARCH_MAP.md  ARCHITECTURE_SCHEMA.md  ATTRIBUTIONS.md  COMPATIBILITY.md  COMPLIANCE_MAPPING.md  DEVELOPMENT.md  FORGE_ROADMAP.md  GOVERNANCE_WIRING.md  KERNEL_GUARANTEES.md  MAINTAINER_GUIDE.md  PROJECT_STRUCTURE.md  QA_GATE_EVIDENCE.md  ROADMAP.md  SECURITY.md  SECURITY_GUIDE.md  VISION.md
docs/adr/: ADR-001-async-first-client.md  README.md  architecture-decision-record-002-runtime-governance.md  architecture-decision-record-003-module-boundaries.md  architecture-decision-record-004-sdk-runtime-split.md
docs/agt/: AGT_ANALYSIS.md  AGT_PATTERNS.md
docs/internal/: JOURNAL.md  ORCHESTRATION.md  SCHEDULER.md  SECURITY_AUDIT_REPORT.md  WIRING_AUDIT.md
docs/public/: DOC_WRITER_PROMPT.md  PRODUCT_CONTEXT.md  index.html  task_manifest.json
docs/recipes/: agent-authentication.md
docs/security/: OWASP_2025_CONTROLS.md  SECURITY_SCANNING.md
docs/sre/: INCIDENT_RESPONSE.md  MONITORING_SETUP.md  SLO_DEFINITIONS.md
examples/: weft_patterns_demo.py
experimental/agent_runtime/: __init__.py  identity.py
experimental/tests/: test_sdk.py
frontend/: package-lock.json  scaffold.py  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
ledger-docs/: PRODUCT_CONTEXT.md  task_manifest.json
ledger-docs/api-reference/: go-sdk.md  webhook-events.md
ledger-docs/core-concepts/: audit-trail.md  billing-quotas.md  policies.md  trust-scoring.md
ledger-docs/getting-started/: GETTING_STARTED_PYTHON.md  GETTING_STARTED_TYPESCRIPT.md
ledger-docs/guides/: production-deployment.md  regulatory-compliance.md  security-best-practices.md
ledger-docs/integrations/: autogen.md  crewai.md  custom-integration.md  langchain.md  openai-agents.md
ledger-docs/migration-guides/: from-manual-logging.md
ledger-docs/promt/: prompt.docx
ledger-docs/recipes/: agent-capability-downgrade.md  agent-sandbox-isolation.md  agent-to-agent-authentication.md  ai-output-verification.md  api-key-rotation-automation.md  cross-border-data-transfer-compliance.md  data-exfiltration-prevention.md  email-sending-rate-limit.md  emergency-shutdown-procedure.md  financial-transaction-governance.md  high-risk-action-approval.md  pii-handling-policy.md
ledger/core/: CHANGELOG.md  FAILURE.md  OPPORTUNITY.md  README.md  SELF-MOD.md
migrations/versions/: 20260426_0430_000000000001_baseline.py
research/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
research/demos/: demo_db_delete.py
research/examples/: basic.py  fastapi_integration.py  governed_actions.py  weft_patterns_demo.py
scripts/: quickstart.py  seed_billing_plans.py  seed_operator.py
src/governance/: __init__.py  audit.py  capability.py  durable.py  killswitch.py
src/ledger/: __init__.py  agent.py  api.py  approval_service.py  audit_service.py  capability_service.py  config.py  constitution.py  dense.py  error_handling.py  executor.py  groups.py  kernel.py  null_propagation.py  policy_resolver.py  precedence.py  repository.py  schema.py  sdk.py  sidecar.py  validation.py
src/ledger_fastapi/: middleware.py  routes.py
templates/python-fastapi/: main.py
tests/: README.md  conftest.py  e2e_api_sdk.py  simulate_lockout.py  test_api_key_manager.py  test_api_keys.py  test_audit_anchoring.py  test_audit_chain_race_regression.py  test_billing.py  test_billing_hardening.py  test_capability_race_regression.py  test_idempotency_race_regression.py  test_jwt_token.py  test_kernel_concurrency.py  test_kernel_conformance.py  test_orchestration.py  test_orchestration_performance.py  test_quickstart.py  test_sdk.py  test_tenant_isolation.py
tests/dashboard/: test_activity_stream.py  test_approval_queue.py  test_audit_explorer.py  test_coverage_heatmap.py  test_kill_switch_panel.py  test_posture_score.py
tests/integration/: e2e_api_sdk.py  test_asyncpg.py  test_fastapi_middleware.py  test_orchestration_db.py  test_rls_enforcement.py  test_tenant_isolation.py  (+2 more)
web/: citadel-motion.js  citadel-tokens.css  contact.html  docs.html  governance.html  index.html  pricing.html
(+576 files in other folders)
