[project]
name = "ledger-sdk"
version = "0.1.0"
description = "AI governance: constitution + audit for agent builders"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
fastapi = [
    "fastapi>=0.109",
    "PyJWT>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledger", "src/governance", "src/ledger_fastapi"]
